--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@ ctx.fill();
 
 ctx.fillStyle = "yellow";
 ctx.beginPath();
-ctx.moveTo(300, 160); // julstjärna
+ctx.moveTo(300, 160); // Julstjärna
 
 ctx.lineTo(305, 175);
 ctx.lineTo(320, 175);
